# vitae

./: .dir-locals.el  .gitattributes  .gitignore  .pdm-python  cv.html  cv.org  cv.tex  generate_pdf.ps1  html_defaults.yaml  justfile  pandoc_defaults.yaml  pdf_defaults.yaml  pollen.rkt  pyproject.toml  todos.org
.github/workflows/: build-cv.yml  build_pdf.yml
content/: personal.yaml
content/en/: education.yaml  experience.yaml  experience.yaml~  projects.yaml  skills.yaml
content/es/: education.yaml  experience.yaml  projects.yaml  skills.yaml
content/es/en/: experience_.yaml
src/: cv.org  cv.tex  cv.yaml  header.tex  template.tex  zapt-en.tex  zapt.tex  zed-en.tex  zed.tex  zproj.tex  zxp-en.tex  zxp.scrbl  zxp.tex  zzpersonal.tex
src/python/: date_logic.py  language_processing.py  process_yaml_data.py  process_yaml_data.py~
templates/: education.tex~  experience.tex  experience.tex~  header.tex  personal.tex  template.tex
templates/html/: base.html  experience.html
templates/latex/: base.tex  education.tex  experience.tex  header.tex  personal.tex
